// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`furet-ui-page-multi-entries-header component empty filter 1`] = `
<header
  id="furet-ui-page-multi-entries-header"
  subtitle="Sub Title"
  total="1"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      >
         
      </span>
    </div>
     
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        <div
          class="field is-grouped-multiline is-grouped"
        >
          <!---->
            
          <!---->
        </div>
      </div>
       
      <div
        class="level-item"
      >
        <div
          class="autocomplete control"
        >
          <div
            class="control has-icons-left is-clearfix"
          >
            <input
              autocomplete="off"
              class="input"
              placeholder="[object Promise]"
              type="text"
            />
             
            <span
              class="icon is-left"
            >
              <i
                class="fa fa-search fa-lg"
              />
            </span>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="dropdown-menu"
            style="display: none;"
          >
            <div
              class="dropdown-content"
              style="display: none;"
            >
              <!---->
               
              <a
                class="dropdown-item"
              >
                
                 
                <small>
                  [object Promise] 
                </small>
                 : 
                <strong>
                  
                </strong>
              </a>
               
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="level-item buttons"
      >
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-refresh"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-redo fa-lg"
            />
          </span>
        </a>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="collapse panel is-pulled-right"
  >
    <div
      class="collapse-trigger"
    />
    <div
      class="collapse-content"
      id=""
      style="display: none;"
    >
      <div
        class="tags"
      />
    </div>
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <!---->
     
  </div>
</header>
`;

exports[`furet-ui-page-multi-entries-header component filter close value 1`] = `
<header
  id="furet-ui-page-multi-entries-header"
  subtitle="Sub Title"
  total="1"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      >
         
      </span>
    </div>
     
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        <div
          class="field is-grouped-multiline is-grouped"
        >
          <!---->
            
          <div
            class="control"
          >
            <div
              class="tags has-addons"
            >
              <!---->
               
              <span
                class="tag is-dark"
              >
                <span
                  class=""
                >
                  [object Promise]
                </span>
                 
                <!---->
              </span>
               
              <span
                class="tag is-primary furet-ui-page-multi-entries-header-filter state fooBar"
              >
                <span
                  class=""
                >
                  fooBar 
                </span>
                 
                <a
                  class="delete is-small"
                  role="button"
                  tabindex="0"
                />
              </span>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="level-item"
      >
        <div
          class="autocomplete control"
        >
          <div
            class="control has-icons-left is-clearfix"
          >
            <input
              autocomplete="off"
              class="input"
              placeholder="[object Promise]"
              type="text"
            />
             
            <span
              class="icon is-left"
            >
              <i
                class="fa fa-search fa-lg"
              />
            </span>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="dropdown-menu"
            style="display: none;"
          >
            <div
              class="dropdown-content"
              style="display: none;"
            >
              <!---->
               
              <a
                class="dropdown-item"
              >
                
                 
                <small>
                  [object Promise] 
                </small>
                 : 
                <strong>
                  
                </strong>
              </a>
               
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="level-item buttons"
      >
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-refresh"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-redo fa-lg"
            />
          </span>
        </a>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="collapse panel is-pulled-right"
  >
    <div
      class="collapse-trigger"
    />
    <div
      class="collapse-content"
      id=""
      style="display: none;"
    >
      <div
        class="tags"
      />
    </div>
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <!---->
     
  </div>
</header>
`;

exports[`furet-ui-page-multi-entries-header component filter one value 1`] = `
<header
  id="furet-ui-page-multi-entries-header"
  subtitle="Sub Title"
  total="1"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      >
         
      </span>
    </div>
     
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        <div
          class="field is-grouped-multiline is-grouped"
        >
          <!---->
            
          <div
            class="control"
          >
            <div
              class="tags has-addons"
            >
              <!---->
               
              <span
                class="tag is-dark"
              >
                <span
                  class=""
                >
                  [object Promise]
                </span>
                 
                <!---->
              </span>
               
              <span
                class="tag is-primary furet-ui-page-multi-entries-header-filter state fooBar"
              >
                <span
                  class=""
                >
                  fooBar 
                </span>
                 
                <a
                  class="delete is-small"
                  role="button"
                  tabindex="0"
                />
              </span>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="level-item"
      >
        <div
          class="autocomplete control"
        >
          <div
            class="control has-icons-left is-clearfix"
          >
            <input
              autocomplete="off"
              class="input"
              placeholder="[object Promise]"
              type="text"
            />
             
            <span
              class="icon is-left"
            >
              <i
                class="fa fa-search fa-lg"
              />
            </span>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="dropdown-menu"
            style="display: none;"
          >
            <div
              class="dropdown-content"
              style="display: none;"
            >
              <!---->
               
              <a
                class="dropdown-item"
              >
                
                 
                <small>
                  [object Promise] 
                </small>
                 : 
                <strong>
                  
                </strong>
              </a>
               
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="level-item buttons"
      >
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-refresh"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-redo fa-lg"
            />
          </span>
        </a>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="collapse panel is-pulled-right"
  >
    <div
      class="collapse-trigger"
    />
    <div
      class="collapse-content"
      id=""
      style="display: none;"
    >
      <div
        class="tags"
      />
    </div>
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <!---->
     
  </div>
</header>
`;

exports[`furet-ui-page-multi-entries-header component filter two value 1`] = `
<header
  id="furet-ui-page-multi-entries-header"
  subtitle="Sub Title"
  total="1"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      >
         
      </span>
    </div>
     
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        <div
          class="field is-grouped-multiline is-grouped"
        >
          <!---->
            
          <div
            class="control"
          >
            <div
              class="tags has-addons"
            >
              <!---->
               
              <span
                class="tag is-dark"
              >
                <span
                  class=""
                >
                  [object Promise]
                </span>
                 
                <!---->
              </span>
               
              <span
                class="tag is-primary furet-ui-page-multi-entries-header-filter state foo"
              >
                <span
                  class=""
                >
                  foo 
                </span>
                 
                <a
                  class="delete is-small"
                  role="button"
                  tabindex="0"
                />
              </span>
              <span
                class="tag is-primary furet-ui-page-multi-entries-header-filter state bar"
              >
                <span
                  class=""
                >
                  bar 
                </span>
                 
                <a
                  class="delete is-small"
                  role="button"
                  tabindex="0"
                />
              </span>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="level-item"
      >
        <div
          class="autocomplete control"
        >
          <div
            class="control has-icons-left is-clearfix"
          >
            <input
              autocomplete="off"
              class="input"
              placeholder="[object Promise]"
              type="text"
            />
             
            <span
              class="icon is-left"
            >
              <i
                class="fa fa-search fa-lg"
              />
            </span>
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="dropdown-menu"
            style="display: none;"
          >
            <div
              class="dropdown-content"
              style="display: none;"
            >
              <!---->
               
              <a
                class="dropdown-item"
              >
                
                 
                <small>
                  [object Promise] 
                </small>
                 : 
                <strong>
                  
                </strong>
              </a>
               
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="level-item buttons"
      >
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-refresh"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-redo fa-lg"
            />
          </span>
        </a>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="collapse panel is-pulled-right"
  >
    <div
      class="collapse-trigger"
    />
    <div
      class="collapse-content"
      id=""
      style="display: none;"
    >
      <div
        class="tags"
      />
    </div>
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <!---->
     
  </div>
</header>
`;

exports[`furet-ui-page-multi-entries-header component snapshot can_go_to_new 1`] = `
<header
  id="furet-ui-page-multi-entries-header"
  subtitle="Sub Title"
  total="1"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      >
         
      </span>
    </div>
     
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        <div
          class="field is-grouped-multiline is-grouped"
        >
          <!---->
            
          <!---->
        </div>
      </div>
       
      <!---->
       
      <div
        class="level-item buttons"
      >
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-refresh"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-redo fa-lg"
            />
          </span>
        </a>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="collapse panel is-pulled-right"
  >
    <div
      class="collapse-trigger"
    />
    <div
      class="collapse-content"
      id=""
      style="display: none;"
    >
      <div
        class="tags"
      />
    </div>
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <button
      class="button is-primary is-outlined"
      id="furet-ui-page-multi-entries-header-new"
    >
      <span
        class="icon"
      >
        <span
          class="icon"
        >
          <i
            class="fa fa-plus fa-lg"
          />
        </span>
      </span>
       
      <span>
        [object Promise]
      </span>
    </button>
     
  </div>
</header>
`;

exports[`furet-ui-page-multi-entries-header component snapshot minimum 1`] = `
<header
  id="furet-ui-page-multi-entries-header"
  subtitle="Sub Title"
  total="1"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      >
         
      </span>
    </div>
     
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        <div
          class="field is-grouped-multiline is-grouped"
        >
          <!---->
            
          <!---->
        </div>
      </div>
       
      <!---->
       
      <div
        class="level-item buttons"
      >
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-refresh"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-redo fa-lg"
            />
          </span>
        </a>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="collapse panel is-pulled-right"
  >
    <div
      class="collapse-trigger"
    />
    <div
      class="collapse-content"
      id=""
      style="display: none;"
    >
      <div
        class="tags"
      />
    </div>
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <!---->
     
  </div>
</header>
`;

exports[`furet-ui-page-multi-entries-header component snapshot with tags no selected 1`] = `
<header
  id="furet-ui-page-multi-entries-header"
  subtitle="Sub Title"
  total="1"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      >
         
      </span>
    </div>
     
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        <div
          class="field is-grouped-multiline is-grouped"
        >
          <!---->
            
          <!---->
        </div>
      </div>
       
      <!---->
       
      <div
        class="level-item buttons"
      >
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-refresh"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-redo fa-lg"
            />
          </span>
        </a>
         
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-tags"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-arrow-circle-down fa-lg"
            />
          </span>
        </a>
      </div>
    </div>
  </div>
   
  <div
    class="collapse panel is-pulled-right"
  >
    <div
      class="collapse-trigger"
    />
    <div
      class="collapse-content"
      id=""
      style="display: none;"
    >
      <div
        class="tags"
      >
        <span
          class="tag is-small has-text-weight-bold"
        >
          <span
            class=""
          >
            <a
              class="furet-ui-page-multi-entries-header-toggle-tag tag1"
            >
              [object Promise]
            </a>
          </span>
           
          <!---->
        </span>
        <span
          class="tag is-small has-text-weight-bold"
        >
          <span
            class=""
          >
            <a
              class="furet-ui-page-multi-entries-header-toggle-tag tag2"
            >
              [object Promise]
            </a>
          </span>
           
          <!---->
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <!---->
     
  </div>
</header>
`;

exports[`furet-ui-page-multi-entries-header component snapshot with tags one selected 1`] = `
<header
  id="furet-ui-page-multi-entries-header"
  subtitle="Sub Title"
  total="1"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      >
         
      </span>
    </div>
     
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        <div
          class="field is-grouped-multiline is-grouped"
        >
          <!---->
           
          <div
            class="control"
          >
            <span
              class="tag is-primary furet-ui-page-multi-entries-header-tag tag1"
            >
              <span
                class=""
              >
                [object Promise] 
              </span>
               
              <a
                class="delete is-small"
                role="button"
                tabindex="0"
              />
            </span>
          </div>
          <!---->
            
          <!---->
        </div>
      </div>
       
      <!---->
       
      <div
        class="level-item buttons"
      >
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-refresh"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-redo fa-lg"
            />
          </span>
        </a>
         
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-tags"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-arrow-circle-down fa-lg"
            />
          </span>
        </a>
      </div>
    </div>
  </div>
   
  <div
    class="collapse panel is-pulled-right"
  >
    <div
      class="collapse-trigger"
    />
    <div
      class="collapse-content"
      id=""
      style="display: none;"
    >
      <div
        class="tags"
      >
        <span
          class="tag is-small"
        >
          <span
            class=""
          >
            <a
              class="furet-ui-page-multi-entries-header-toggle-tag tag1"
            >
              [object Promise]
            </a>
          </span>
           
          <!---->
        </span>
        <span
          class="tag is-small has-text-weight-bold"
        >
          <span
            class=""
          >
            <a
              class="furet-ui-page-multi-entries-header-toggle-tag tag2"
            >
              [object Promise]
            </a>
          </span>
           
          <!---->
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <!---->
     
  </div>
</header>
`;

exports[`furet-ui-page-multi-entries-header component snapshot with tags two selected 1`] = `
<header
  id="furet-ui-page-multi-entries-header"
  subtitle="Sub Title"
  total="1"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      >
         
      </span>
    </div>
     
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        <div
          class="field is-grouped-multiline is-grouped"
        >
          <!---->
           
          <div
            class="control"
          >
            <span
              class="tag is-primary furet-ui-page-multi-entries-header-tag tag1"
            >
              <span
                class=""
              >
                [object Promise] 
              </span>
               
              <a
                class="delete is-small"
                role="button"
                tabindex="0"
              />
            </span>
          </div>
          <div
            class="control"
          >
            <span
              class="tag is-primary furet-ui-page-multi-entries-header-tag tag2"
            >
              <span
                class=""
              >
                [object Promise] 
              </span>
               
              <a
                class="delete is-small"
                role="button"
                tabindex="0"
              />
            </span>
          </div>
            
          <!---->
        </div>
      </div>
       
      <!---->
       
      <div
        class="level-item buttons"
      >
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-refresh"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-redo fa-lg"
            />
          </span>
        </a>
         
        <a
          class="button"
          id="furet-ui-page-multi-entries-header-tags"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-arrow-circle-down fa-lg"
            />
          </span>
        </a>
      </div>
    </div>
  </div>
   
  <div
    class="collapse panel is-pulled-right"
  >
    <div
      class="collapse-trigger"
    />
    <div
      class="collapse-content"
      id=""
      style="display: none;"
    >
      <div
        class="tags"
      >
        <span
          class="tag is-small"
        >
          <span
            class=""
          >
            <a
              class="furet-ui-page-multi-entries-header-toggle-tag tag1"
            >
              [object Promise]
            </a>
          </span>
           
          <!---->
        </span>
        <span
          class="tag is-small"
        >
          <span
            class=""
          >
            <a
              class="furet-ui-page-multi-entries-header-toggle-tag tag2"
            >
              [object Promise]
            </a>
          </span>
           
          <!---->
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <!---->
     
  </div>
</header>
`;
